[b]Version 0.8.4[/b]:

(2013-03-04)
 * Add the checkbox "Move the window when the video area is dragged" 
   in preferences -> interface.

(2013-03-03)
 * Add an option in the help menu to show a first steps guide.

(2013-03-01)
 * (Windows) Fix: now all key shortcuts should work when using the
   floating control.

(2013-02-28)
 * Hopefully fix bug 3605753 (stay-on-top-while-playing not
   working after fullscreen).

(2013-02-27)
 * Add a submenu to the help menu, to share smplayer with your friends.
 * Add support for encoding ISO-8859-16 for subtitles.

(2013-02-22)
 * Copy the content of the clipboard, if it looks like a url, to 
   the open url input field.

(2013-02-16)
 * Now it's possible to set the fps for external subtitles.

(2013-02-11)
 * Change the default value of the OSD to "subtitles only".
 * Change the default value of "allow frame drop" to false.

(2013-02-05)
 * Add the Thai translation, by มาโนชญ์ สมศักดิ์ <xyteton at hotmail dot com>

(2013-01-31)
 * Add the Hebrew translaton, by Genghis Khan <genghiskhan at gmx dot ca>

(2013-01-26)
 * Add an option to enable the video equalizer by software in the
   video equalizer window.

(2013-01-25)
 * The video equalizer dialog has been rewritten.

(2013-01-21)
 * Add a confirmation dialog to delete the list of recent files.

(2013-01-13)
 * Add bik and smk to the list of video extensions.
 * Add aac and dts to the list of audio extensions.
 
(2013-01-12)
 * Add mts to the list of video extensions.

(2012-12-23)
 * Ignore other mouse events if the window is been moved by dragging
   the video area.


[b]Version 0.8.3[/b]:

(2012-12-20)
 * Fix for youtube playback.

(2012-11-28)
 * Show the mouse cursor immediately when the mouse is moved on the video
   area.
 * Help -> FAQ opens http://smplayer.sourceforge.net/faq.php


[b]Version 0.8.2[/b]:

(2012-11-15)
 * New option Help -> Open configuration folder.

(2012-11-12)
 * Don't use slices as default, as it seems to cause problems when using